Add test_build_tree detail and make subdir

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 lib_LTLIBRARIES = libcounter.la
-libcounter_la_SOURCES = counter.c counter.h
+libcounter_la_SOURCES = parser/counter.c parser/counter.h
 
 bin_PROGRAMS = main
 main_SOURCES = main.c
