--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,6 +2,6 @@
 
 TESTS = check_counter
 check_PROGRAMS = check_counter
-check_counter_SOURCES = check_counter.c $(top_builddir)/src/counter.h
+check_counter_SOURCES = parser/check_counter.c $(top_builddir)/src/parser/counter.h
 check_counter_CFLAGS = @CHECK_CFLAGS@
 check_counter_LDADD = $(top_builddir)/src/libcounter.la @CHECK_LIBS@
